Projects Page Update
The projects page is finally functional, additions include PPD (THM) , STICKY2CMD & PortPeter

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </main>
 
         <footer>
-            <p id="footerstatus">I Am Currently Employed & I Am Seeking Job Offers At This Time</p>
+            <p id="footerstatus">I Am Currently Employed & I Am Not Seeking Job Offers At This Time</p>
             Copyright &copy; Christopher Richardson - 2024 - <a href="mailto:chrisar2000@outlook.com" aria-label="Send an email to Chrisar2000@outlook.com">Chrisar2000@outlook.com</a>
             <br>
             <p id="footersubtext">Please note: My email address is provided strictly for job offers or professional inquiries. Unsolicited messages, advertisements, or spam are not permitted.</p>
