--- a/portscanner.html
+++ b/portscanner.html
@@ -32,25 +32,17 @@
 
         <main>
             <div class="gallery">
-                    <img src="me.jpg" alt="A photo of Christopher Richardson" style="height: 21em; width: 20em; border: 4px solid #01497C; border-radius: 10px;" id="meimg">
-                    <img src="me2.jpg" alt="A photo of Christopher Richardson" style="height: 21em; width: 19em; border: 4px solid #01497C; border-radius: 10px;" id="meimg">
-                    <img src="me3.jpg" alt="A photo of Christopher Richardson" style="height: 21em; width: 20em; border: 4px solid #01497C; border-radius: 10px;" id="meimg">
+                    <img src="PortPeter.png" alt="PortPeter Filler Photo" style="height: 21em; width: 20em; border: 4px solid #01497C; border-radius: 10px;" id="meimg">
+                    <img src="PortPeter.png" alt="PortPeter Filler Photo" style="height: 21em; width: 19em; border: 4px solid #01497C; border-radius: 10px;" id="meimg">
+                    <img src="PortPeter.png" alt="PortPeter Filler Photo" style="height: 21em; width: 20em; border: 4px solid #01497C; border-radius: 10px;" id="meimg">
            </div>
 
            <div class="development">
 
            <h1>Notice:</h1>
-           <p>This page is still under development.</p>
+           <p>This page is still under development. PortPeter is under development and once completed will be posted here. It will be open source. PortPeter will be a Walmart version of NMAP, just a fun personal development project!</p>
 
            </div>
-
-           <div class="development">
-            <div>
-                <a href="https://tryhackme.com/r/p/chrisryzen" target="_blank"><img src="THMbtn.png" alt="thm button" class="projectimg"> </a>
-                <a href="./sticky2cmd.html"; target="_blank";> <img src="Sticky2CMD.png" alt="Sticky2CMD Post regarding a project of mine working at Mindfire Technologies." class="projectimg"> </a>
-                <a  href="portscanner.html"; target="_blank";> <img src="PortPeter.png" alt="PortPeter, a port scanner I am currently working on." class="projectimg"> </a>
-                <br>
-            </div>
 
             
 
