--- a/zeroday.html
+++ b/zeroday.html
@@ -34,7 +34,7 @@
 
            <div class="development">
 
-            <iframe width="1280" height="720" src="https://youtu.be/-2_z_FXRuGM"></iframe>
+            <p>in progress</p>
 
            </video>
 
