--- a/zeroday.html
+++ b/zeroday.html
@@ -32,11 +32,11 @@
 
         <main>
 
-           <div class="development">
+           <div class="developmentstyle2">
+            <h1>Zero-Days: A Hacker’s Secret Weapon Explained</h1>
+            <p>In this video, we explore the world of zero-day vulnerabilities—what they are, how they’re discovered, and the impact they have on cybersecurity. From real-world examples to the measures taken to defend against these unseen threats, this video breaks down the complexities of zero-days in a way that’s both engaging and easy to understand.</p>
 
-            <p>in progress</p>
-
-           </video>
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/-2_z_FXRuGM?si=1Xm98BBMDvRJIPlk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
            </div>
         </main>
