changed index, added new project. RTCPS.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
 
-        
+        <!--You wont find any valuable information here ;) what are you doing?-->
 
         <main>
             <div class="gallery">
@@ -72,8 +72,10 @@
                     <li>Cyber Security Associates Degree - Ongoing</li>
                     <li id="unobtained">Computer Science Bachelors Degree - Not Yet Obtained</li>
                 </ul>
-            </div>
+            </div>           
+           </div>
 
+           <div class="employment">
             <div>
                 <h1>
                     My Experience
@@ -83,27 +85,22 @@
                         <th>Company</th>
                         <th>Hire Date</th>
                         <th>End Date</th>
+                        <th>Length</th>
                     </tr>
                     <tr>
                         <td>Mindfire Technologies</td>
                         <td>September 2024</td>
                         <td>Present</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>Armada Security</td>
                         <td>September 2024</td>
                         <td>Present</td>
+                        <td>TBD</td>
                     </tr>
                 </table>
-                <!--
-                <ul>
-                    <li>Mindfire Technologies from September 2024-Present</li>
-                </ul>
-                -->
             </div>
-
-            
-
            </div>
 
 
