--- a/projects.html
+++ b/projects.html
@@ -47,9 +47,10 @@
            <div class="development">
             <div>
                 <a href="https://tryhackme.com/r/p/chrisryzen" target="_blank"><img src="THMbtn.png" alt="thm button" class="projectimg"> </a>
-                <a href="./sticky2cmd.html"; target="_blank";> <img src="Sticky2CMD.png" alt="Sticky2CMD Post regarding a project of mine working at Mindfire Technologies." class="projectimg"> </a>
-                <a href="portscanner.html"; target="_blank";> <img src="PortPeter.png" alt="PortPeter, a port scanner I am currently working on." class="projectimg"> </a>
-                <a href="zeroday.html"; target="_blank";> <img src="tn.png" alt="video thumbnail" class="projectimg"></a>
+                <a href="./sticky2cmd.html"> <img src="Sticky2CMD.png" alt="Sticky2CMD Post regarding a project of mine working at Mindfire Technologies." class="projectimg"> </a>
+                <a href="portscanner.html"> <img src="PortPeter.png" alt="PortPeter, a port scanner I am currently working on." class="projectimg"> </a>
+                <a href="zeroday.html"> <img src="tn.png" alt="video thumbnail" class="projectimg"></a>
+                <a href="phantomkey.html"> <img src="phantomkey.png" alt="PhantomKey Post regarding a personal project of mine that initiates a reverse TCP shell connection on a PC whenever the USB is plugged in." class="projectimg"> </a>
                 <br>
                 <a href="knowledgebase.html"; target="_blank";> <img src="Knowledgebase.jpg" alt="Knowledgebase, a collection of knowledge I find interesting!" class="projectimg"> </a>
             </div>
