--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
                 <a href="./sticky2cmd.html"> <img src="Sticky2CMD.png" alt="Sticky2CMD Post regarding a project of mine working at Mindfire Technologies." class="projectimg"> </a>
                 <a href="portscanner.html"> <img src="PortPeter.png" alt="PortPeter, a port scanner I am currently working on." class="projectimg"> </a>
                 <a href="zeroday.html"> <img src="tn.png" alt="video thumbnail" class="projectimg"></a>
+                <a href="rustserver.html"> <img src="gameserverthumbnail.png" alt="thumbnail for my server page" class="projectimg"></a>
                 <br>
                 <a href="knowledgebase.html"; target="_blank";> <img src="Knowledgebase.jpg" alt="Knowledgebase, a collection of knowledge I find interesting!" class="projectimg"> </a>
             </div>
