--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <ul>
                     <li>COMPTIA A+ Certification - Ongoing</li>
                     <li id="unobtained">COMTPIA SEC+ - Not Yet Obtained</li>
-                    <li id="unobtained">COMPTIA NET+ - Not Yet Obtained</li>
+                    <li>COMPTIA NET+ - Ongoing</li>
+                    <li>ConnectWise RMM Certification - Obtained 1/28/2025</li>
                 </ul>
                 <h3>Degrees</h3>
                 <ul>
